--- a/ESP/06_ESP8266_webserver_with HCJ/platformio.ini
+++ b/ESP/06_ESP8266_webserver_with HCJ/platformio.ini
@@ -13,4 +13,7 @@ platform = espressif8266
 board = nodemcuv2
 framework = arduino
 monitor_speed = 115200
+board_build.filesystem = littlefs
 lib_deps = lorol/LittleFS_esp32@^1.0.6
+
+
