--- a/ESP/01_ESP8266_12E_ledBlink/platformio.ini
+++ b/ESP/01_ESP8266_12E_ledBlink/platformio.ini
@@ -8,8 +8,34 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[env:nodemcu]
+platform = espressif8266
+board = nodemcu
+framework = arduino
+monitor_speed = 115200
+
 [env:nodemcuv2]
 platform = espressif8266
 board = nodemcuv2
 framework = arduino
 monitor_speed = 115200
+
+
+[env:nanoatmega328new]
+platform = atmelavr
+board = nanoatmega328new
+framework = arduino
+monitor_speed = 9600
+
+[env:uno]
+platform = atmelavr
+board = uno
+framework = arduino
+monitor_speed = 9600
+
+[env:bluepill_f103c8]
+platform = ststm32
+board = bluepill_f103c8
+monitor_speed = 115200
+framework = arduino
+# upload_protocol = stlink
